# CurlyScript-Compiler

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  ccurly.pc.in
src/: main.cpp
